# VIO_IROCU

./: CMakeLists.txt  package.xml
config/: apm_pluginlists_vins.yaml  aruco_layout.yaml
launch/: apm_vins.launch  aruco_survey.launch  bringup.launch  bringup_aruco.launch  survey.launch
scripts/: aruco_localizer.py  aruco_vio_survey.py  autonomous_survey.py  reset_drone.py
